# ai_jobs_project

./: README.md  pyproject.toml
src/ai_jobs_project/: ai.py  chat.py  docs.py  spreadsheet.py  utils.py
